# rust-axum-starter

./: Cargo.toml
src/: context.rs  error.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tasks.rs
tests/: quick_dev.rs
